<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/txttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/brown"
            android:text="@string/Title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/txtsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/brown"
            android:text="@string/subtitle"
            android:textAppearance="?android:attr/textAppearanceLarge"/>


        <ImageView
            android:id="@+id/imge"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/login"
            android:contentDescription="@string/desc"
            android:layout_marginTop="30dp"/>


        <EditText
            android:id="@+id/lblone"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:shadowColor="@color/brown"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/edit_round"
            android:autofillHints="@string/email"
            android:inputType="text"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/lbltwo"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:shadowColor="@color/brown"
            android:layout_marginTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:background="@drawable/edit_round"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword">

        </EditText>


        <Button
            android:id="@+id/btnlogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btnofertas"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            style="?attr/buttonBarButtonStyle"
            android:onClick="FormActivity"
            android:drawableStart="@drawable/ic_shopping_cart_black_24dp"/>

        <Button
            android:id="@+id/btnexplorar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            style="?attr/buttonBarButtonStyle"
            android:onClick="ContentActivity"
            android:drawableStart="@drawable/ic_explore_black_24dp"
            />
        </LinearLayout>


    </LinearLayout>

</ScrollView>


