<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:layout_width="88dp"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc"
            android:drawableStart="@drawable/ic_menu_black_24dp"
            android:src="@drawable/ic_menu_black_24dp">

        </ImageButton>

        <TextView
            android:id="@+id/title"
            android:layout_width="88dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:textColor="@color/black"
            android:text="@string/notes"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <ImageButton
            android:layout_width="88dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_search_black_24dp">

        </ImageButton>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="576dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="77dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />


            <ImageView
                android:id="@+id/img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/desc"
                android:onClick="EventToast"
                android:src="@drawable/fotodos">

            </ImageView>

            <TextView
                android:id="@+id/scond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/segundotexto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/segundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:text="@string/titlethree"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />


            <ImageView
                android:id="@+id/imagen"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/desc"
                android:onClick="EventToast"
                android:src="@drawable/fototres">

            </ImageView>

            <TextView
                android:id="@+id/cuarta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/tercertexto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/quart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/desc"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:text="@string/cuartotext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />


            <ImageView
                android:id="@+id/imagenes"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/desc"
                android:onClick="EventToast"
                android:src="@drawable/fotouno" />


        </LinearLayout>


    </ScrollView>




    </RelativeLayout>